# MI-GL

./: CMakeLists.txt
MI-GL/.obsidian/: workspace.json
MI-GL/Gaussian Splatting/: Terms.md
MI-GL/OpenGL/: OpenGL Info.md  OpenGL.md
cmake/: Findglfw3.cmake
dependencies/glad/: glad.h
src/: glad.c  main.cpp  shader.h
